--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
-<font-size: 28pt>
+   
+<h1> 한자 알파벳 (한자 암기법 , 한자 외우기)</h1>
+   
+<font-size: 250%>
 <b> 한자 알파벳 (한자 암기법 , 한자 외우기)</b>
 </fontsize>
    
