--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
        <title>한자 알파벳</title>
     </head>
 <frameset rows = "150, *">
-    <frameset src = "frame1.html" name = "up" noresize>
+    <frame src = "frame1.html" name = "up" noresize>
     <frameset  cols = "100, *">
           <frame src = "frame2.html" name = "left" noresize>
           <frame src = "frame2.html" name = "left" noresize>
