--- a/frame1.html
+++ b/frame1.html
@@ -1,5 +1,13 @@
 <html>
+  
 <p>한자
+<span class='green_window'>
+<input id=text type="text" class='input_text' name="search" onkeydown="enterSearch()"/></span>
+
 <p>한글
-<p>조회
+<span class='green_window'>
+<input id=text type="text" class='input_text' name="search" onkeydown="enterSearch()"/></span>
+
+<p>
+<input type="button" class='sch_smit' value="검색" onclick="myFunction()"/>
 <html>
