--- a/frame1.html
+++ b/frame1.html
@@ -2,11 +2,25 @@
   
 <p>한자
 <span class='green_window'>
-<input id=text type="text" class='input_text' name="search1" onkeydown="enterSearch()"/></span>
+<input id=text type="text" class='input_text' name="search" onkeydown="enterSearch()"/></span>
 
 <p>한글
 <span class='green_window'>
-<input id=text type="text" class='input_text' name="search2" onkeydown="enterSearch()"/></span>
+<input id=text type="text" class='input_text' name="search" onkeydown="enterSearch()"/></span>
 
 <input type="button" class='sch_smit' value="검색" onclick="myFunction()"/>
+  
+<!-- JAVASCRIPT -->
+<script type="text/javascript">
+function enterSearch() {
+    if(event.keyCode == 13){
+        myFunction();  // 실행할 이벤트
+    }
+}
+function myFunction() {
+    var x = document.getElementById("text").value;
+    document.write(x);
+}
+</script>
+  
 <html>
