--- a/frame1.html
+++ b/frame1.html
@@ -2,13 +2,12 @@
   
 <p>한자
 <span class='green_window'>
-<input id=text type="text" class='input_text' name="search1" onkeydown="enterSearch()"/></span>
-<input type="button" class='sch_smit' value="검색1" onclick="myFunction()"/>
-  
+<input id=text type="text" class='input_text' name="search1" onkeydown="enterSearch()"/>
+ 
 <p>한글
-<span class='green_window'>
 <input id=text type="text" class='input_text' name="search2" onkeydown="enterSearch()"/></span>
-<input type="button" class='sch_smit' value="검색2" onclick="myFunction()"/>
+
+<input type="button" class='sch_smit' value="검색" onclick="myFunction()"/>
   
 <!-- JAVASCRIPT -->
 <script type="text/javascript">
