--- a/frame1.html
+++ b/frame1.html
@@ -2,10 +2,10 @@
   
 <p>한자
 <span class='green_window'>
-<input id=text type="text" class='input_text' name="search" onkeydown="enterSearch1()"/>
+<input id=text1 type="text" class='input_text' name="search" onkeydown="enterSearch1()"/>
  
 <p>한글
-<input id=text type="text" class='input_text' name="search" onkeydown="enterSearch2()"/></span>
+<input id=text2 type="text" class='input_text' name="search" onkeydown="enterSearch2()"/></span>
 
 <input type="button" class='sch_smit' value="검색" onclick="myFunction()"/>
   
@@ -13,19 +13,25 @@
 <script type="text/javascript">
 function enterSearch1() {
     if(event.keyCode == 13){
-        myFunction();  // 실행할 이벤트
+        myFunction1();  // 실행할 이벤트
     }
 }
 function enterSearch2() {
     if(event.keyCode == 13){
-        myFunction();  // 실행할 이벤트
+        myFunction2();  // 실행할 이벤트
     }
 }  
   
-function myFunction() {
-    var x = document.getElementById("text").value;
+function myFunction1() {
+    var x = document.getElementById("text1").value;
     document.write(x);
 }
+
+function myFunction2() {
+    var x = document.getElementById("text2").value;
+    document.write(x);
+}
+  
 </script>
   
 <html>
