--- a/frame1.html
+++ b/frame1.html
@@ -2,10 +2,10 @@
   
 <p>한자
 <span class='green_window'>
-<input id=text1 type="text" class='input_text' name="search" onkeydown="enterSearch1()"/>
+<input id=text type="text" class='input_text' name="search" onkeydown="enterSearch1()"/>
  
 <p>한글
-<input id=text2 type="text" class='input_text' name="search" onkeydown="enterSearch2()"/></span>
+<input id=text2 type="text" class='input_text' name="search2" onkeydown="enterSearch2()"/></span>
 
 <input type="button" class='sch_smit' value="검색" onclick="myFunction()"/>
   
@@ -23,7 +23,7 @@ function enterSearch2() {
 }  
   
 function myFunction1() {
-    var x = document.getElementById("text1").value;
+    var x = document.getElementById("text").value;
     document.write(x);
 }
 
