--- a/frame1.html
+++ b/frame1.html
@@ -2,10 +2,7 @@
   
 <p>한자
 <span class='green_window'>
-<input id=text type="text" class='input_text' name="search" onkeydown="enterSearch1()"/>
- 
-<p>한글
-<input id=text2 type="text" class='input_text' name="search2" onkeydown="enterSearch2()"/></span>
+<input id=text type="text" class='input_text' name="search" onkeydown="enterSearch1()"/></span>
 
 <input type="button" class='sch_smit' value="검색" onclick="myFunction()"/>
   
@@ -16,21 +13,13 @@ function enterSearch1() {
         myFunction1();  // 실행할 이벤트
     }
 }
-function enterSearch2() {
-    if(event.keyCode == 13){
-        myFunction2();  // 실행할 이벤트
-    }
-}  
+
   
 function myFunction1() {
     var x = document.getElementById("text").value;
     document.write(x);
 }
 
-function myFunction2() {
-    var x = document.getElementById("text2").value;
-    document.write(x);
-}
   
 </script>
   
