--- a/frame1.html
+++ b/frame1.html
@@ -2,20 +2,19 @@
   
 <p>한자
 <span class='green_window'>
-<input id=text type="text" class='input_text' name="search" onkeydown="enterSearch1()"/></span>
-
+<input id=text type="text" class='input_text' name="search" onkeydown="enterSearch()"/></span>
 <input type="button" class='sch_smit' value="검색" onclick="myFunction()"/>
   
 <!-- JAVASCRIPT -->
 <script type="text/javascript">
-function enterSearch1() {
+function enterSearch() {
     if(event.keyCode == 13){
-        myFunction1();  // 실행할 이벤트
+        myFunction();  // 실행할 이벤트
     }
 }
 
   
-function myFunction1() {
+function myFunction() {
     var x = document.getElementById("text").value;
     document.write(x);
 }
