--- a/frame1.html
+++ b/frame1.html
@@ -29,13 +29,13 @@ function enterSearch2() {
 function myFunction() {
     var x = document.getElementById("text").value;
     document.write(x);
-    document.write(' <form><input type="button" value="페이지 새로 고침" onClick="window.location.reload()"></form> ');
+    document.write(' <p> <form><input type="button" value="페이지 새로 고침" onClick="window.location.reload()"></form> ');
 }
   
 function myFunction2() {
     var x = document.getElementById("text2").value;
     document.write(x);
-    document.write(' <form><input type="button" value="페이지 새로 고침" onClick="window.location.reload()"></form> ');
+    document.write(' <p> <form><input type="button" value="페이지 새로 고침" onClick="window.location.reload()"></form> ');
 }
 
   
