--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <frame src = "frame1.html" name = "up" noresize>
     <frameset  cols = "200, *">
           <frame src = "frame2.html" name = "left" noresize>
-          <frame src = "frame3.html" name = "left" noresize>
+          <frame src = "frame3.html" name = "main" noresize>
      </frameset>
 </frameset>
 <html>
