--- a/frame1.html
+++ b/frame1.html
@@ -1,5 +1,7 @@
 <html>
   
+  <p><a href="frame4.html" target="main"> 프레임4</a>
+  
 <p>한자
 <span class='green_window'>
 <input id=text type="text" class='input_text' name="search" onkeydown="enterSearch()"/></span>
