--- a/frame1.html
+++ b/frame1.html
@@ -1,6 +1,6 @@
 <html>
   
-  <p><a href="https://muckmool.github.io/frame4.html" target="main"> 프레임4</a>
+  <p><a href="https://muckmool.github.io/frame4.html" target="left"> 프레임2</a>
   
 <p>한자
 <span class='green_window'>
