--- a/frame1.html
+++ b/frame1.html
@@ -1,6 +1,6 @@
 <html>
   
-  <p><a href="https://muckmool.github.io/frame4.html" target="left"> 프레임2</a>
+<p>
   
 <p>한자
 <span class='green_window'>
@@ -30,16 +30,17 @@ function enterSearch2() {
   
 function myFunction() {
     var x = document.getElementById("text").value;
-    document.write(x);
+    document.write('<a href="https://muckmool.github.io/frame4.html" target="main">' + x + '</a>');
     document.write(' <p> <form><input type="button" value="페이지 새로 고침" onClick="window.location.reload()"></form> ');
 }
   
 function myFunction2() {
     var x = document.getElementById("text2").value;
-    document.write(x);
+    document.write('<a href="https://muckmool.github.io/frame4.html" target="main">' + x + '</a>');
     document.write(' <p> <form><input type="button" value="페이지 새로 고침" onClick="window.location.reload()"></form> ');
 }
 
+  
   
 </script>
   
