--- a/frame2.html
+++ b/frame2.html
@@ -1,6 +1,6 @@
 <html>
   
-  <p><a href="https://muckmool.github.io/hanja/사람인_人.html" target="main"> 사람인 人</a>
+  <p><a href="https://muckmool.github.io/hanja/사람인.html" target="main"> 사람인 人</a>
   
   
 </html>
