--- a/frame1.html
+++ b/frame1.html
@@ -30,13 +30,13 @@ function enterSearch2() {
   
 function myFunction() {
     var x = document.getElementById("text").value;
-    document.write('<a href="https://muckmool.github.io/frame4.html" target="main">' + x + '</a>');
+    document.write('<a href="https://muckmool.github.io/hanja/'+ x + '.html" target="main">' + x + '</a>');
     document.write(' <p> <form><input type="button" value="페이지 새로 고침" onClick="window.location.reload()"></form> ');
 }
   
 function myFunction2() {
     var x = document.getElementById("text2").value;
-    document.write('<a href="https://muckmool.github.io/frame4.html" target="main">' + x + '</a>');
+    document.write('<a href="https://muckmool.github.io/hangul/' + x + '.html" target="main">' + x + '</a>');
     document.write(' <p> <form><input type="button" value="페이지 새로 고침" onClick="window.location.reload()"></form> ');
 }
 
