--- a/frame2.html
+++ b/frame2.html
@@ -1,7 +1,7 @@
 <html>
   
-  <p><a href="https://muckmool.github.io/hangul/사람인.html" target="main"> 사람인 </a>
-     <a href="https://muckmool.github.io/hanja/人.html" target="main"> 人 </a>
+  <p><a href="https://muckmool.github.io/hangul/한자알파벳.html" target="main"> 한자 알파벳 300자 </a>
+
   
   
 </html>
