--- a/frame2.html
+++ b/frame2.html
@@ -1,6 +1,6 @@
 <html>
   
-  <p><a href="https://muckmool.github.io//한자알파벳.html" target="main"> 한자 알파벳 300자 </a>
+  <p><a href="https://muckmool.github.io/alphabet/한자알파벳.html" target="main"> 한자 알파벳 300자 </a>
 
   
   
