--- a/alphabet/한자알파벳.html
+++ b/alphabet/한자알파벳.html
@@ -1,4 +1,4 @@
 <html>
-<p><a href="한일.html" target="main">한일 一</a>
+<p><a href="https://github.com/muckmool/muckmool.github.io/hangul/한일.html" target="main">한일 一</a>
 
 <html>
