--- a/alphabet/한자알파벳.html
+++ b/alphabet/한자알파벳.html
@@ -1,4 +1,5 @@
 <html>
 <p><a href="https://github.com/muckmool/muckmool.github.io/hangul/하나일.html" target="main">하나일 一</a>
+<p><a href="https://github.com/muckmool/muckmool.github.io/hangul/두이.html" target="main">두이 二</a>
 
 <html>
