--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <frameset rows = "150, *">
     <frame src = "frame1.html" name = "up" noresize>
     <frameset  cols = "500, *">
-          <frame src = "frame2.html" name = "left" noresize>
-          <frame src = "frame3.html" name = "main" noresize>
+          <frame src = "frame2.html" name = "left" noresize scrolling ="auto">
+          <frame src = "frame3.html" name = "main" noresize scrolling ="auto">
      </frameset>
 </frameset>
 <html>
