--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
     <head>
        <title>한자 알파벳</title>
     </head>
-<frameset rows = "150, *">
-    <frame src = "frame1.html" name = "up" noresize>
-    <frameset  cols = "350, *">
-          <frame src = "frame2.html" name = "left" noresize scrolling ="auto">
-          <frame src = "frame3.html" name = "main" noresize scrolling ="auto">
+<frameset cols = "700, *">
+    <frame src = "frame3.html" name = "main" noresize>
+    <frameset  rows = "700, *">
+          <frame src = "frame2.html" name = "category" noresize scrolling ="auto">
+          <frame src = "frame1.html" name = "search" noresize scrolling ="auto">
      </frameset>
 </frameset>
 <html>
