--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
     <head>
        <title>한자 알파벳</title>
     </head>
-<frameset cols = "700, *">
+<frameset cols = "70%, *">
     <frame src = "frame3.html" name = "main" noresize>
-    <frameset  rows = "700, *">
+    <frameset  rows = "70%, *">
           <frame src = "frame2.html" name = "category" noresize scrolling ="auto">
           <frame src = "frame1.html" name = "search" noresize scrolling ="auto">
      </frameset>
