--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
        <title>한자 알파벳</title>
     </head>
 <frameset cols = "70%, *">
-    <frame src = "frame3.html" name = "main" noresize>
+    <frame src = "main.html" name = "main" noresize>
     <frameset  rows = "70%, *">
-          <frame src = "frame2.html" name = "category" noresize scrolling ="auto">
-          <frame src = "frame1.html" name = "search" noresize scrolling ="auto">
+          <frame src = "category.html" name = "category" noresize scrolling ="auto">
+          <frame src = "search.html" name = "search" noresize scrolling ="auto">
      </frameset>
 </frameset>
 <html>
