--- a/category.html
+++ b/category.html
@@ -1,6 +1,38 @@
 <html>
-  
-  <p><a href="https://muckmool.github.io/한자알파벳.html" target="main"> 한자 알파벳 300자 </a>
+
+<head>
+<style type="text/css">
+
+    /* 트리 오픈/클로저 체크박스를 숨김 처리 */
+    input[type="checkbox"] {
+        display:none;
+    }
+
+    input[type="checkbox"]:checked~ul {
+        display:none;
+    }
+</style>
+</head>
+
+<body>
+    <input type="checkbox" id="root"/>
+    <label for="root">카테고리</label>
+    <ul>
+
+        <li>
+            <input type="checkbox" id="C1" checked="checked">
+            <label for="C1">한자 알파벳 300자</label>
+            <ul>
+                <li><a href="https://muckmool.github.io/한자알파벳.html" target="main"> 전체 </a></li>
+                <li>C1_01</li>
+                <li>C1_02</li>
+                <li>C1_03</li>
+            </ul>
+        </li>
+    </ul>
+
+</body>
+</html>
 
   
   
