--- a/category.html
+++ b/category.html
@@ -21,9 +21,10 @@
 
         <li>
             <input type="checkbox" id="C1" checked="checked">
+            <label for="C1"><a href="https://muckmool.github.io/memory.html" target="main">한자 외우는 법</a></label>
             <label for="C1">한자 알파벳 300자</label>
             <ul>
-                <li><a href="https://muckmool.github.io/한자알파벳.html" target="main">전체</a></li>
+                <li><a href="https://muckmool.github.io/.html" target="main">전체</a></li>
                 <li>C1_01</li>
                 <li>C1_02</li>
                 <li>C1_03</li>
