--- a/category.html
+++ b/category.html
@@ -27,7 +27,7 @@
             
             <label for="C1">한자 알파벳 300자</label>
             <ul>
-                <li><a href="https://muckmool.github.io/.html" target="main">전체</a></li>
+                <li><a href="https://muckmool.github.io/alphabet.html" target="main">전체</a></li>
                 <li>C1_01</li>
                 <li>C1_02</li>
                 <li>C1_03</li>
