--- a/category.html
+++ b/category.html
@@ -28,7 +28,7 @@
             <label for="C1">한자 알파벳 300자</label>
             <ul>
                 <li><a href="https://muckmool.github.io/alphabet.html" target="main">전체</a></li>
-                <li>01.수</li>
+                <li><a href="https://muckmool.github.io/alphabet.html#01.수" target="main">01.수</a></li>
                 <li>C1_02</li>
                 <li>C1_03</li>
             </ul>
