--- a/alphabet.html
+++ b/alphabet.html
@@ -3,8 +3,9 @@
 한일 一 </a> <p><a href="https://muckmool.github.io/hangul/두이.html" target="main">
 두이 二 </a> <p><a href="https://muckmool.github.io/hangul/석삼.html" target="main">
 석삼 三 </a>
-  
-<p>01. 수</p>
+
+<p>
+<p><b><a name="01.">01. 수</b></p>
 <p>&nbsp;</p>
 <p>고대인들은 글자와 종이가 없을 때 나무가지를 겹쳐 놓거나 벽에 작대기를 그려서 수를 표시하거나 셈을 했습니다.</p>
 <p>&nbsp;</p>
