--- a/alphabet.html
+++ b/alphabet.html
@@ -54,7 +54,8 @@
 <p><span style="color: #333333;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span>소뼈점의 경우의 수는 아주 많다. 소뼈점으로 1,000,000,000,000를 표현</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<p>02. 천체</p>
+  
+<p><b><a name="02.천체">02. 천체</b></p>
 <p>&nbsp;</p>
 <p>고대인은 하늘을 쳐다 보았습니다. 하늘에는 여러 천체들이 있었습니다. 이 천체들이 아주 주기적으로 움직이는 것을 보고 시간을 표현하였습니다.</p>
 <p>&nbsp;</p>
