--- a/alphabet.html
+++ b/alphabet.html
@@ -5,7 +5,7 @@
 석삼 三 </a>
 
 <p>
-<p><b><a name="01.">01. 수</b></p>
+<p><b><a name="01.수">01. 수</b></p>
 <p>&nbsp;</p>
 <p>고대인들은 글자와 종이가 없을 때 나무가지를 겹쳐 놓거나 벽에 작대기를 그려서 수를 표시하거나 셈을 했습니다.</p>
 <p>&nbsp;</p>
