--- a/alphabet.html
+++ b/alphabet.html
@@ -1,19 +1,18 @@
 <html>
-             <p><a href="https://muckmool.github.io/hangul/한일.html" target="main">
-한일 一 </a> <p><a href="https://muckmool.github.io/hangul/두이.html" target="main">
-두이 二 </a> <p><a href="https://muckmool.github.io/hangul/석삼.html" target="main">
-석삼 三 </a>
 
 <p>
 <p><b><a name="01.수">01. 수</b></p>
 <p>&nbsp;</p>
 <p>고대인들은 글자와 종이가 없을 때 나무가지를 겹쳐 놓거나 벽에 작대기를 그려서 수를 표시하거나 셈을 했습니다.</p>
 <p>&nbsp;</p>
-<p><b>1.1 한일 一</b></p>
+  
+<p><b>1.1 <a href="https://muckmool.github.io/hangul/한일.html" target="main"> 한일 一 </a></b></p>
 <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;: 나무 작대기 하나</p>
-<p><b>1.2 두이 二</b></p>
+
+<p><b>1.2 <a href="https://muckmool.github.io/hangul/두이.html" target="main">두이 二</a></b></p>
 <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;= 한일 一 + 한일 一&nbsp; : 나무 작대기 둘</p>
-<p><b>1.3 석삼 三</b></p>
+
+<p><b>1.3 <a href="https://muckmool.github.io/hangul/석삼.html" target="main">석삼 三</a></b></p>
 <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;= 한일 一 + 한일 一 + 한일 一&nbsp;: 나무 작대기 셋</p>
 <p><b>1.4 넉사 四&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</b></p>
 <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;=나라국 囗 (나무 작대기 넷) + 어진사람인 儿 (다리)&nbsp;: 나라 국경 성벽은 네면,&nbsp;짐승 다리도 넷</p>
