--- a/category.html
+++ b/category.html
@@ -29,6 +29,23 @@
             <ul>
                 <li><a href="https://muckmool.github.io/alphabet.html#01.수" target="main">01.수</a></li>
                 <li><a href="https://muckmool.github.io/alphabet.html#02.천체" target="main">02.천체</a></li>
+                <li><a href="https://muckmool.github.io/alphabet.html#03.산" target="main">03.산</a></li>
+                <li><a href="https://muckmool.github.io/alphabet.html#04.천" target="main">04.천</a></li>
+                <li><a href="https://muckmool.github.io/alphabet.html#05.초" target="main">05.초</a></li>
+                <li><a href="https://muckmool.github.io/alphabet.html#06.목" target="main">06.목</a></li>
+                <li><a href="https://muckmool.github.io/alphabet.html#07.동물" target="main">07.동물</a></li>
+                <li><a href="https://muckmool.github.io/alphabet.html#08.농사" target="main">08.농사</a></li>
+                <li><a href="https://muckmool.github.io/alphabet.html#09.사회" target="main">09.사회</a></li>
+                <li><a href="https://muckmool.github.io/alphabet.html#10.의" target="main">10.의</a></li>
+                <li><a href="https://muckmool.github.io/alphabet.html#11.식" target="main">11.식</a></li>
+                <li><a href="https://muckmool.github.io/alphabet.html#12.주" target="main">12.주</a></li>
+                <li><a href="https://muckmool.github.io/alphabet.html#13.제사" target="main">13.제사</a></li>
+                <li><a href="https://muckmool.github.io/alphabet.html#14.전쟁" target="main">14.전쟁</a></li>
+                <li><a href="https://muckmool.github.io/alphabet.html#15.사람몸" target="main">15.사람몸</a></li>
+                <li><a href="https://muckmool.github.io/alphabet.html#16.신체일부" target="main">16.신체일부</a></li>
+                <li><a href="https://muckmool.github.io/alphabet.html#17.기술" target="main">17.기술</a></li>
+                <li><a href="https://muckmool.github.io/alphabet.html#18.추상" target="main">18.추상</a></li>
+
                 <li>C1_03</li>
             </ul>
         </li>
