--- a/alphabet.html
+++ b/alphabet.html
@@ -68,7 +68,9 @@
 <p><span style="color: #333333;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<span>&nbsp;</span></span>: 초저녁에 초승달이 뜨고 구름이 지나는 모양</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<p>03. 산</p>
+
+
+<p><b><a name="03.산">03.산</b></p>
 <p>&nbsp;</p>
 <p>주위를 둘러보면 하늘 다음으로 많이 보이는 것이 산입니다. 한자에도 산이 다른 글자들의 밑글자가 되는 경우가 많습니다.</p>
 <p>&nbsp;</p>
@@ -95,7 +97,8 @@
 <p><span style="color: #333333;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<span>&nbsp;</span></span>: 무언가 위에서 아래로 떨어질 때 주변에 작은 부스러기들도 같이 떨어진다</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<p>04. 천</p>
+
+<p><b><a name="04.천">04.천</b></p>
 <p>&nbsp;</p>
 <p>고대인은 산에서 흘러 나오는 시냇물을 보았습니다. 그 근원이 궁금하여 물길을 따라 올라가 보았습니다.</p>
 <p>&nbsp;</p>
@@ -123,7 +126,8 @@
 <p><span style="color: #333333;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<span>&nbsp;</span></span>: 비가 올때 밭에 번개가 떨어진 후 넓게 펼쳐지는 모습</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<p>05. 초</p>
+
+<p><b><a name="05.초">05.초</b></p>
 <p>&nbsp;</p>
 <p>우리가 사는 주변에는 곳곳에 풀이 돋아납니다. 이 풀은 사람들의 먹을거리, 입을거리, 사는 집과 연관된 글자들의 밑글자로 사용됩니다.</p>
 <p>&nbsp;</p>
@@ -144,7 +148,8 @@
 <p><span style="color: #333333;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <span>&nbsp;</span></span>물의 표면은 지구 중력 방향으로 일정한 평면을 유지함, 평평하다</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<p>06. 목</p>
+  
+<p><b><a name="06.목">06.목</b></p>
 <p>&nbsp;</p>
 <p>우리가 사는 지구에서 나무의 중요성은 엄청난 것입니다. 한자에서도 나무의 존재감은 아주 큽니다.</p>
 <p>&nbsp;</p>
@@ -163,7 +168,8 @@
 <p><span style="color: #333333;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span><span style="color: #333333;">&nbsp;</span>: 대나무의 뾰족한 잎과 길죽한 줄기 모양, 여러 그루가 한군데서 자라는 모양</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<p>07. 동물</p>
+  
+<p><b><a name="07.동물">07.동물</b></p>
 <p>&nbsp;</p>
 <p>동물은 사람의 의식주 및 문화와 밀접하게 관련되어 있고 동물의 움직임을 관찰하여 글자를 만든 경우도 많습니다.</p>
 <p>&nbsp;</p>
@@ -290,7 +296,8 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<p>08. 농사</p>
+  
+<p><b><a name="08.농사">08.농사</b></p>
 <p>&nbsp;</p>
 <p>고대인들에게 농사는 의식주를 해결하고 문화의 중심에 놓여 있었습니다.</p>
 <p>&nbsp;</p>
@@ -334,7 +341,8 @@
 <p><span style="color: #333333;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span><span style="color: #333333;">&nbsp;</span>: 석발기, 쌀에서 돌을 골라내는 석발기 모양</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<p>09. 사회</p>
+  
+<p><b><a name="09.사회">09.사회</b></p>
 <p>&nbsp;</p>
 <p>고대인들은 자연 부락을 이루며 살다가 한자가 정리되던 한나라 시대에 이르러 사회를 이루기 시작했습니다. 직업과 계급이 생기고 범죄를 일으키는 사람을 벌주기도 했습니다.</p>
 <p>&nbsp;</p>
@@ -361,7 +369,8 @@
 <p><span style="color: #333333;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span><span style="color: #333333;">&nbsp;</span>: 죄인을 체포한 후 죄인의 목 중앙에 칼을 채운 모습</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<p>10. 의</p>
+  
+<p><b><a name="10.의">10.의</b></p>
 <p>&nbsp;</p>
 <p>사람이 태어나면 알몸으로 태어납니다. 어머니의 뱃속을 떠난 인간에게 입는 옷은 생존이며 무기이며 신분이며 자아정체성입니다. 한자가 형성될 때는 합성섬유가 없었기 때문에 대부분 짐승의 가죽, 털, 삼베, 명주, 비단 등의 이용하여 옷을 만들었습니다.</p>
 <p>&nbsp;</p>
@@ -417,7 +426,8 @@
 <p><span style="color: #333333;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span><span style="color: #333333;">&nbsp;</span>: 황제의 옷에 달린 황옥 흉패 모양, 누런색</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<p>11. 식</p>
+  
+<p><b><a name="11.식">11.식</b></p>
 <p>&nbsp;</p>
 <p>사람이 음식을 먹는다고 합니다. 그런데 음식은 먹혀서 그 사람의 몸이 됩니다. 그럼 사람이 음식을 먹는 것일까요 아니면 음식이 사람을 먹는 것일까요? 고대 중국에서도 먹는 것은 생활에서 중요한 부분이었고 한자에도 반영되어 있습니다.</p>
 <p>&nbsp;</p>
@@ -468,7 +478,8 @@
 <p><span style="color: #333333;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span><span style="color: #333333;">&nbsp;</span>: 마개가 있는 기름병, 술병 모양, 천간의 닭유로 차용됨</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<p>12. 주</p>
+  
+<p><b><a name="12.주">12.주</b></p>
 <p>&nbsp;</p>
 <p><b>12.1 삼합집 亼</b></p>
 <p><span style="color: #333333;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span><span style="color: #333333;">&nbsp;</span>: 지붕이 땅에 붙은 움집</p>
@@ -495,7 +506,8 @@
 <p><span style="color: #333333;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span><span style="color: #333333;">&nbsp;</span>: 등잔의 기름이&nbsp;타면서 빛을 내는 모습</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<p>13. 제사</p>
+  
+<p><b><a name="13.제사">13.제사</b></p>
 <p>&nbsp;</p>
 <p>고대 중국에서는 조상에게 제사를 지내면서 조상이 자손들에게 복을 주도록 빌었습니다. 일요일이나 휴일이 없던 중국에서 제사날은 휴일의 개념이었습니다.</p>
 <p>&nbsp;</p>
@@ -519,7 +531,8 @@
 <p><span style="color: #333333;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span><span style="color: #333333;">&nbsp;</span>: 귀신탈을 쓴 무당의 모습</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<p>14. 전쟁</p>
+  
+<p><b><a name="14.전쟁">14.전쟁</b></p>
 <p>&nbsp;</p>
 <p>고대 중국은 국가의 체계가 확고하지 않아 전쟁이 많이 일어났습니다. 한자에도 그 흔적들이 있습니다.</p>
 <p>&nbsp;</p>
@@ -548,7 +561,8 @@
 <p><span style="color: #333333;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span><span style="color: #333333;"> </span>:&nbsp;네모난&nbsp;칼의&nbsp;한쪽이&nbsp;부러진&nbsp;모양,&nbsp;칼이&nbsp;망가진&nbsp;것으로&nbsp;싸움에서&nbsp;진&nbsp;것,&nbsp;망한&nbsp;것을&nbsp;표현함</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<p>15. 사람몸</p>
+  
+<p><b><a name="15.사람몸">15.사람몸</b></p>
 <p>&nbsp;</p>
 <p>중국에는 사람이 정말 많습니다. 고대 중국에서도 사람이 많았기 때문에 한자에도 사람몸을 닮은 글자들이 많습니다.</p>
 <p>&nbsp;</p>
@@ -622,7 +636,8 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<p>16. 신체일부</p>
+  
+<p><b><a name="16.신체일부">16.신체일부</b></p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p><b>16.1 쌍상투관 丱</b></p>
@@ -749,7 +764,8 @@
 <p><span style="color: #333333;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span><span style="color: #333333;">&nbsp;</span>:&nbsp;살없는&nbsp;죽은&nbsp;뼈&nbsp;모양</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<p>17. 기술</p>
+  
+<p><b><a name="17.기술">17.기술</b></p>
 <p>&nbsp;</p>
 <p><b>17.1 기와와 瓦</b></p>
 <p><span style="color: #333333;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span><span style="color: #333333;">&nbsp;</span>: 암키와 수키와 합친모양</p>
@@ -826,7 +842,8 @@
 <p><span style="color: #333333;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span><span style="color: #333333;">&nbsp;</span>: 소금물 끓이는 솥에서 소금 결정이 생긴 모양</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<p>18. 추상</p>
+  
+<p><b><a name="18.추상">18.추상</b></p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p><b>18.1 위상 上</b></p>
