--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <html>
     <head>
        <title>한자 알파벳</title>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F5YCWJPFVS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-F5YCWJPFVS');
+</script>
+        
     </head>
 <frameset cols = "30%, *">
     <frameset  rows = "80%, *">
