--- a/hangul/한일.html
+++ b/hangul/한일.html
@@ -1,1 +1,3 @@
-<html> <p> ÇÑÀÏ ìé</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ³ª¹« ÀÛ´ë±â ÇÏ³ª</p><p>¿µ¾î: One</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> 
+  <meta http-equiv="Content-Type" content="text/html"; charset=utf-8">
+  <p> í•œì¼ ä¸€</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ë‚˜ë¬´ ìž‘ëŒ€ê¸° í•˜ë‚˜</p><p>ì˜ì–´: One</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
