--- a/hangul/가죽혁.html
+++ b/hangul/가죽혁.html
@@ -1,1 +1,3 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> °¡Á×Çõ úÔ</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ¹þ°ÜÁø Áü½ÂÀÇ °¡Á× ¸ð¾ç, ¸Ó¸®, ¸öÅë, ²¿¸® ¸ð¾ç</p><p>¿µ¾î: Leather</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> 
+  <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
+  <p> ê°€ì£½í˜ é©</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ë²—ê²¨ì§„ ì§ìŠ¹ì˜ ê°€ì£½ ëª¨ì–‘, ë¨¸ë¦¬, ëª¸í†µ, ê¼¬ë¦¬ ëª¨ì–‘</p><p>ì˜ì–´: Leather</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
