--- a/hangul/갈거.html
+++ b/hangul/갈거.html
@@ -1,3 +1,4 @@
 <html> 
-  <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 갈거 去</p> 
+  <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
+  <p> 갈거 去</p> 
   <p>스펠: </p><p>풀이: 사람이 걸어갈 때 다리가 접히는 모양</p><p>영어: Go</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
