--- a/hangul/갈착.html
+++ b/hangul/갈착.html
@@ -1,1 +1,3 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> °¥Âø ?</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ½¬¾ö½¬¾ö°¥Âø, ¹ß°ú ±× µÚÀÇ ¹ßÀÚ±¹ ¸ð¾ç (90µµ È¸Àü)</p><p>¿µ¾î: walk</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> 
+  <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
+  <p> ê°ˆì°© è¾¶</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ì‰¬ì—„ì‰¬ì—„ê°ˆì°©, ë°œê³¼ ê·¸ ë’¤ì˜ ë°œìžêµ­ ëª¨ì–‘ (90ë„ íšŒì „)</p><p>ì˜ì–´: walk</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
