--- a/hangul/감출혜.html
+++ b/hangul/감출혜.html
@@ -1,1 +1,2 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> °¨ÃâÇý ?</p> <p>½ºÆç: </p><p>Ç®ÀÌ: µÚ·Î ¼ûÀ¸¸é ¾Èº¸ÀÌ´Â ÀºÆó¹° ¸ð¾ç, ÀºÆó¹°ÀÌ ¹«¾ð°¡ °¨Ãß°í ÀÖ´Ù</p><p>¿µ¾î: Hide</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
+  <p> ê°ì¶œí˜œ åŒ¸</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ë’¤ë¡œ ìˆ¨ìœ¼ë©´ ì•ˆë³´ì´ëŠ” ì€íë¬¼ ëª¨ì–‘, ì€íë¬¼ì´ ë¬´ì–¸ê°€ ê°ì¶”ê³  ìžˆë‹¤</p><p>ì˜ì–´: Hide</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
