--- a/hangul/개견.html
+++ b/hangul/개견.html
@@ -1,1 +1,2 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> °³°ß Ì³</p> <p>½ºÆç: </p><p>Ç®ÀÌ: Çô¸¦ ³»¹Ð°í ÇíÇí´ë´Â °³ÀÇ ¸ð½À</p><p>¿µ¾î: Dog</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
+  <p> ê°œê²¬ çŠ¬</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: í˜€ë¥¼ ë‚´ë°€ê³  í—¥í—¥ëŒ€ëŠ” ê°œì˜ ëª¨ìŠµ</p><p>ì˜ì–´: Dog</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
