--- a/hangul/개견변.html
+++ b/hangul/개견변.html
@@ -1,1 +1,2 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> °³°ßº¯ ?</p> <p>½ºÆç: </p><p>Ç®ÀÌ: °³°ßÀ» º¯À¸·Î »ç¿ëÇÏ±â À§ÇØ ¸¸µç °£·«Çü, ½Ã°è ¹Ý´ë¹æÇâÀ¸·Î 90µµ È¸ÀüÇÏ¸é °³ÀÇ ¸ð½ÀÀÌ µÊ</p><p>¿µ¾î: Dog</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
+  <p> ê°œê²¬ë³€ çŠ­</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ê°œê²¬ì„ ë³€ìœ¼ë¡œ ì‚¬ìš©í•˜ê¸° ìœ„í•´ ë§Œë“  ê°„ëžµí˜•, ì‹œê³„ ë°˜ëŒ€ë°©í–¥ìœ¼ë¡œ 90ë„ íšŒì „í•˜ë©´ ê°œì˜ ëª¨ìŠµì´ ë¨</p><p>ì˜ì–´: Dog</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
