--- a/hangul/거듭증.html
+++ b/hangul/거듭증.html
@@ -1,3 +1,5 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> °ÅµìÁõ ñô</p> <p>½ºÆç: </p><p>Ç®ÀÌ: Áõ±â·Î ¹«¾ð°¡¸¦ Âî´Â ½Ã·ç¸ð¾ç, ¾Æ·¡ Ç×¾Æ¸®¿¡ À­ Ç×¾Æ¸®°¡ °ÅµìÇØ¼­ ¾ñ¾îÁ® ÀÖ´Ù
-
- </p><p>¿µ¾î: Again</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
+ 
+ <p> ê±°ë“­ì¦ æ›¾</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ì¦ê¸°ë¡œ ë¬´ì–¸ê°€ë¥¼ ì°ŒëŠ” ì‹œë£¨ëª¨ì–‘, ì•„ëž˜ í•­ì•„ë¦¬ì— ìœ— í•­ì•„ë¦¬ê°€ ê±°ë“­í•´ì„œ ì–¹ì–´ì ¸ ìžˆë‹¤ </p>
+ 
+ <p>ì˜ì–´: Again</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
