--- a/hangul/검을현.html
+++ b/hangul/검을현.html
@@ -1,1 +1,2 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> °ËÀ»Çö úÜ</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ½Ç¸è ? À» ²¿¾Æ¼­ ¸¸µç ¹åÁÙ, º­¸´ÁÙ¿¡ ±â¸§À» ¸Ô¿©¼­ °ËÀº»öÀ¸·Î º¸ÀÓ</p><p>¿µ¾î: Black</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
+  <p> ê²€ì„í˜„ çŽ„</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ì‹¤ë©± ? ì„ ê¼¬ì•„ì„œ ë§Œë“  ë°§ì¤„, ë²¼ë¦¿ì¤„ì— ê¸°ë¦„ì„ ë¨¹ì—¬ì„œ ê²€ì€ìƒ‰ìœ¼ë¡œ ë³´ìž„</p><p>ì˜ì–´: Black</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
