--- a/hangul/검을흑.html
+++ b/hangul/검을흑.html
@@ -1,1 +1,2 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> °ËÀ»Èæ ýÙ</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ºÒ¶© ¾Æ±ÃÀÌ¿Í ±¼¶Ò¿¡ ¹¯Àº °Ë´ó</p><p>¿µ¾î: Black</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
+  <p> ê²€ì„í‘ é»‘</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ë¶ˆë• ì•„ê¶ì´ì™€ êµ´ëšì— ë¬»ì€ ê²€ëŒ•</p><p>ì˜ì–´: Black</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
