--- a/hangul/겉표.html
+++ b/hangul/겉표.html
@@ -1,1 +1,2 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> °ÑÇ¥ øú</p> <p>½ºÆç: ¿¹»ÜºÀ ? ¿ÊÀÇ ëý</p><p>Ç®ÀÌ: µ¿¹°ÀÇ ÅÐÀÌ °¡½ÃÃ³·³ µ¸Àº °Ñ¿Ê ¸ð¾ç</p><p>¿µ¾î: Outside</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
+  <p> ê²‰í‘œ è¡¨</p> <p>ìŠ¤íŽ : ì˜ˆì ë´‰ ? ì˜·ì˜ è¡£</p><p>í’€ì´: ë™ë¬¼ì˜ í„¸ì´ ê°€ì‹œì²˜ëŸ¼ ë‹ì€ ê²‰ì˜· ëª¨ì–‘</p><p>ì˜ì–´: Outside</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
