--- a/hangul/고기육.html
+++ b/hangul/고기육.html
@@ -1,1 +1,2 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> °í±âÀ° ë¿</p> <p>½ºÆç: </p><p>Ç®ÀÌ: °í±âÀÇ ±Ù¸·°ú ÈûÁÙ ¸ð¾ç</p><p>¿µ¾î: Meat</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
+  <p> ê³ ê¸°ìœ¡ è‚‰</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ê³ ê¸°ì˜ ê·¼ë§‰ê³¼ íž˜ì¤„ ëª¨ì–‘</p><p>ì˜ì–´: Meat</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
