--- a/hangul/고을주.html
+++ b/hangul/고을주.html
@@ -1,1 +1,2 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> °íÀ»ÁÖ ñ¶</p> <p>½ºÆç: </p><p>Ç®ÀÌ: °­ÀÌ Èê·¯°¡´Ù À¯¼ÓÀÌ ´À·ÁÁö´Â °­ÇÏ±¸¿¡ ºñ¿ÁÇÑ »ï°¢ÁÖ°¡ »ý°Ü³µ°í ±× »ï°¢ÁÖ¿¡ ¸¶À»ÀÌ Çü¼ºµÇ¾ú½À´Ï´Ù. °æÁÖ, ±¤ÁÖ</p><p>¿µ¾î: Town</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
+  <p> ê³ ì„ì£¼ å·ž</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ê°•ì´ í˜ëŸ¬ê°€ë‹¤ ìœ ì†ì´ ëŠë ¤ì§€ëŠ” ê°•í•˜êµ¬ì— ë¹„ì˜¥í•œ ì‚¼ê°ì£¼ê°€ ìƒê²¨ë‚¬ê³  ê·¸ ì‚¼ê°ì£¼ì— ë§ˆì„ì´ í˜•ì„±ë˜ì—ˆìŠµë‹ˆë‹¤. ê²½ì£¼, ê´‘ì£¼</p><p>ì˜ì–´: Town</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
