--- a/hangul/구할구.html
+++ b/hangul/구할구.html
@@ -1,1 +1,3 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ±¸ÇÒ±¸ Ï´</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ÅÐ¿ÊÀÌ »ç¶÷À» ÃßÀ§·Î ºÎÅÍ ±¸Çß´Ù.</p><p>¿µ¾î: Save</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
+  
+  <p> êµ¬í• êµ¬ æ±‚</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: í„¸ì˜·ì´ ì‚¬ëžŒì„ ì¶”ìœ„ë¡œ ë¶€í„° êµ¬í–ˆë‹¤.</p><p>ì˜ì–´: Save</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
