--- a/hangul/굽을곡.html
+++ b/hangul/굽을곡.html
@@ -1,1 +1,2 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ±ÁÀ»°î ÍØ</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ´ë³ª¹« ±ÁÇô¼­ ¸¸µç ¹Ù±¸´Ï ¹Ù±¸´Ï ¸ð¾ç </p><p>¿µ¾î: Bend</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
+  <p> êµ½ì„ê³¡ æ›²</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ëŒ€ë‚˜ë¬´ êµ½í˜€ì„œ ë§Œë“  ë°”êµ¬ë‹ˆ ë°”êµ¬ë‹ˆ ëª¨ì–‘ </p><p>ì˜ì–´: Bend</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
