--- a/hangul/기슭엄.html
+++ b/hangul/기슭엄.html
@@ -1,1 +1,3 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ±â½¾¾ö ?</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ¹ÙÀ§ ¾Æ·¡ ±¼ÀÌ ÀÖ´Â ±¼¹ÙÀ§, ÁýÀ¸·Î »ç¿ëµÇ±âµµ ÇÏ°í Àýº®À¸·Î »ç¿ëµÇ±âµµ ÇÔ</p><p>¿µ¾î: House</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
+  
+  <p> ê¸°ìŠ­ì—„ åŽ‚</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ë°”ìœ„ ì•„ëž˜ êµ´ì´ ìžˆëŠ” êµ´ë°”ìœ„, ì§‘ìœ¼ë¡œ ì‚¬ìš©ë˜ê¸°ë„ í•˜ê³  ì ˆë²½ìœ¼ë¡œ ì‚¬ìš©ë˜ê¸°ë„ í•¨</p><p>ì˜ì–´: House</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
