--- a/hangul/기와와.html
+++ b/hangul/기와와.html
@@ -1,1 +1,3 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ╠Б©м©м Х©</p> <p>╫╨фГ: </p><p>г╝юл: ╬ое╟©м ╪Же╟©м гудё╦П╬Г</p><p>©╣╬Н: loof tile</p><p>аъ╠╧: </p><p>юо╤Ф: </p><p>юою╫: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
+  
+  <p> Й╦╟Л≥─Л≥─ Г⌠╕</p> <p>Л┼╓М▌═: </p><p>М▓─Л²╢: Л∙■М┌╓Л≥─ Л┬≤М┌╓Л≥─ М∙╘Л╧°К╙╗Л√▒</p><p>Л≤│Л√╢: loof tile</p><p>Л╓▒Й╣╜: </p><p>Л²╪К°╩: </p><p>Л²╪Л²▄: </p> </html>
