--- a/hangul/기운기.html
+++ b/hangul/기운기.html
@@ -1,1 +1,3 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ±â¿î±â ?</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ¹äÀ» ÇÒ¶§ ¶Ñ²±À» µé½âÀÌ´Â Áõ±â ¸ð¾ç, Áõ±â°¡ ±â¿îÀÌ ¼¼´Ù</p><p>¿µ¾î: Stream</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
+  
+  <p> ê¸°ìš´ê¸° æ°”</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ë°¥ì„ í• ë•Œ ëšœê»‘ì„ ë“¤ì©ì´ëŠ” ì¦ê¸° ëª¨ì–‘, ì¦ê¸°ê°€ ê¸°ìš´ì´ ì„¸ë‹¤</p><p>ì˜ì–´: Stream</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
