--- a/hangul/긴장.html
+++ b/hangul/긴장.html
@@ -1,1 +1,3 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ±äÀå íþ</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ±ä ¸Ó¸®Ä«¶ôÀ» ÈÖ³¯¸®´Â ¸ð¾ç</p><p>¿µ¾î: Long</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
+  
+  <p> ê¸´ìž¥ é•·</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ê¸´ ë¨¸ë¦¬ì¹´ë½ì„ íœ˜ë‚ ë¦¬ëŠ” ëª¨ì–‘</p><p>ì˜ì–´: Long</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
