--- a/hangul/길게걸을인.html
+++ b/hangul/길게걸을인.html
@@ -1,1 +1,3 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ±æ°Ô°ÉÀ»ÀÎ ?</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ¹ß°ú ±× µÚÀÇ ¹ßÀÚ±¹ ¸ð¾ç (90µµ È¸Àü) </p><p>¿µ¾î: wide step walk</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
+  
+  <p> ê¸¸ê²Œê±¸ì„ì¸ å»´</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ë°œê³¼ ê·¸ ë’¤ì˜ ë°œìžêµ­ ëª¨ì–‘ (90ë„ íšŒì „) </p><p>ì˜ì–´: wide step walk</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
