--- a/hangul/깃우.html
+++ b/hangul/깃우.html
@@ -1,1 +1,3 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ±κΏμ ιβ</p> <p>½ΊΖη: </p><p>Η®ΐΜ: »υΐΗ µΞ ³―°³ΏΝ ±κΕΠ ΈπΎη</p><p>ΏµΎξ: Feather</p><p>Αί±Ή: </p><p>ΐΟ¶ζ: </p><p>ΐΟΐ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
+  
+  <p> κΉƒμ° ηΎ½</p> <p>μ¤ν : </p><p>ν’€μ΄: μƒμ λ‘ λ‚ κ°μ™€ κΉƒν„Έ λª¨μ–‘</p><p>μμ–΄: Feather</p><p>μ¤‘κµ­: </p><p>μΌλ»: </p><p>μΌμ: </p> </html>
