--- a/hangul/꿰뚫을관.html
+++ b/hangul/꿰뚫을관.html
@@ -1,3 +1,3 @@
 <html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
   
-  <p> 꿰뚫을관 串</p> <p>스펠: </p><p>풀이: 꿰뚫은 모양</p><p>영어: Skew</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
+  <p> 꿰뚫을관 毌</p> <p>스펠: </p><p>풀이: 꿰뚫은 모양</p><p>영어: Skew</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
