--- a/hangul/날비.html
+++ b/hangul/날비.html
@@ -1,1 +1,3 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ³¯ºñ ?</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ³¯°³ÁþÇÏ¿© ³¯À¸´Â »õÀÇ ³¯°³ ¸ð¾ç</p><p>¿µ¾î: Fly</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
+  
+  <p> ë‚ ë¹„ é£ž</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ë‚ ê°œì§“í•˜ì—¬ ë‚ ìœ¼ëŠ” ìƒˆì˜ ë‚ ê°œ ëª¨ì–‘</p><p>ì˜ì–´: Fly</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
