--- a/hangul/날생.html
+++ b/hangul/날생.html
@@ -1,1 +1,3 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ³―»ύ ίζ</p> <p>½ΊΖη: </p><p>Η®ΐΜ: ¶¥Ώ΅Ό­ µΈΎΖ³­ Η®ΐΜ Α¦Ήύ ΐΪ¶σΌ­ ΐΩΐΜ Ώ©·― °³ ³ªΏΒ ΈπΎη</p><p>ΏµΎξ: Birth</p><p>Αί±Ή: </p><p>ΐΟ¶ζ: </p><p>ΐΟΐ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
+  
+  <p> λ‚ μƒ η”</p> <p>μ¤ν : </p><p>ν’€μ΄: λ•…μ—μ„ λ‹μ•„λ‚ ν’€μ΄ μ λ²• μλΌμ„ μμ΄ μ—¬λ¬ κ° λ‚μ¨ λª¨μ–‘</p><p>μμ–΄: Birth</p><p>μ¤‘κµ­: </p><p>μΌλ»: </p><p>μΌμ: </p> </html>
