--- a/hangul/낮오.html
+++ b/hangul/낮오.html
@@ -1,1 +1,3 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ³·¿À çí</p> <p>½ºÆç: </p><p>Ç®ÀÌ: Àý±Â°øÀÌ¿Í ±×¸²ÀÚ, ´ë³·¿¡´Â Àý±¸¸¦ »ç¿ëÇÏÁö ¾Ê¾Æ Àý±Â°øÀÌ°¡ ¼öÁ÷À¸·Î ¼¼¿öÁ®ÀÖ°í ±×¸²ÀÚ°¡ ¤F¾ÆÁü, Á¤¿À µî ½Ã°£À» ³ªÅ¸³»´Â °³³äÀ¸·Î »ç¿ëµÊ</p><p>¿µ¾î: Noon</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
+  
+  <p> ë‚®ì˜¤ åˆ</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ì ˆêµ¿ê³µì´ì™€ ê·¸ë¦¼ìž, ëŒ€ë‚®ì—ëŠ” ì ˆêµ¬ë¥¼ ì‚¬ìš©í•˜ì§€ ì•Šì•„ ì ˆêµ¿ê³µì´ê°€ ìˆ˜ì§ìœ¼ë¡œ ì„¸ì›Œì ¸ìžˆê³  ê·¸ë¦¼ìžê°€ Fì•„ì§, ì •ì˜¤ ë“± ì‹œê°„ì„ ë‚˜íƒ€ë‚´ëŠ” ê°œë…ìœ¼ë¡œ ì‚¬ìš©ë¨</p><p>ì˜ì–´: Noon</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
