--- a/hangul/가죽피.html
+++ b/hangul/가죽피.html
@@ -1,3 +1,1 @@
-<html> 
-  <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
-  <p> 가죽피 皮</p> <p>스펠: </p><p>풀이: 짐승을 매달고 손에 비수를 들고 짐승의 가죽을 벗기는 모양</p><p>영어: Leather</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 가죽피 皮</p> <p>스펠: </p><p>풀이: 짐승을 매달고 손에 비수를 들고 짐승의 가죽을 벗기는 모양</p><p>영어: Leather</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
