--- a/hangul/고을주.html
+++ b/hangul/고을주.html
@@ -1,2 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
-  <p> 고을주 州</p> <p>스펠: </p><p>풀이: 강이 흘러가다 유속이 느려지는 강하구에 비옥한 삼각주가 생겨났고 그 삼각주에 마을이 형성되었습니다. 경주, 광주</p><p>영어: Town</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 고을주 州</p> <p>스펠: </p><p>풀이: 강이 흘러가다 유속이 느려지는 강하구에 비옥한 삼각주가 생겨났고 그 삼각주에 마을이 형성되었습니다. 경주, 광주</p><p>영어: Town</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
