--- a/hangul/귀이.html
+++ b/hangul/귀이.html
@@ -1,3 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
-  
-  <p> 귀이 耳</p> <p>스펠: </p><p>풀이: 귓바퀴와 귓구멍을 가진 귀</p><p>영어: Ear</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 귀이 耳</p> <p>스펠: </p><p>풀이: 귓바퀴와 귓구멍을 가진 귀</p><p>영어: Ear</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
