--- a/hangul/그칠지.html
+++ b/hangul/그칠지.html
@@ -1,3 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
-  
-  <p> 그칠지 止</p> <p>스펠: </p><p>풀이: 앞을 향한 발, 언덕에서 미끄러지지 않으려고 발을 내밀고 정지하는 모습</p><p>영어: stop</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 그칠지 止</p> <p>스펠: </p><p>풀이: 앞을 향한 발, 언덕에서 미끄러지지 않으려고 발을 내밀고 정지하는 모습</p><p>영어: stop</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
