--- a/hangul/닭유.html
+++ b/hangul/닭유.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ´ßÀ¯ ë·</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ¸¶°³°¡ ÀÖ´Â ±â¸§º´, ¼úº´ ¸ð¾ç, Ãµ°£ÀÇ ´ßÀ¯·Î Â÷¿ëµÊ</p><p>¿µ¾î: Chicken</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ë‹­ìœ  é…‰</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ë§ˆê°œê°€ ìžˆëŠ” ê¸°ë¦„ë³‘, ìˆ ë³‘ ëª¨ì–‘, ì²œê°„ì˜ ë‹­ìœ ë¡œ ì°¨ìš©ë¨</p><p>ì˜ì–´: Chicken</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
