--- a/hangul/두이.html
+++ b/hangul/두이.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> µΞΐΜ μ£</p> <p>½ΊΖη: ΗΡΐΟ μι ΗΡΐΟ μι</p><p>Η®ΐΜ: ³ªΉ« ΐΫ΄λ±β µΞ °³</p><p>ΏµΎξ: Two</p><p>Αί±Ή: </p><p>ΐΟ¶ζ: </p><p>ΐΟΐ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> λ‘μ΄ δΊ</p> <p>μ¤ν : ν•μΌ δΈ€ ν•μΌ δΈ€</p><p>ν’€μ΄: λ‚λ¬΄ μ‘λ€κΈ° λ‘ κ°</p><p>μμ–΄: Two</p><p>μ¤‘κµ­: </p><p>μΌλ»: </p><p>μΌμ: </p> </html>
