--- a/hangul/등질발.html
+++ b/hangul/등질발.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ╣НаЗ╧ъ ?</p> <p>╫╨фГ: </p><p>г╝юл: ╣НаЬ ╣н╧ъ ╦П╬Г, а╕╩Г ╠в╦╘©║ дядяхВ ╫в╬ф ©ц╦╟ ╟М╠Б</p><p>©╣╬Н: foot</p><p>аъ╠╧: </p><p>юо╤Ф: </p><p>юою╫: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> К⌠╠Л╖┬К╟° ?</p> <p>Л┼╓М▌═: </p><p>М▓─Л²╢: К⌠╠Л╖└ К▒░К╟° К╙╗Л√▒, Л═°Л┌╛ Й╥╦К╕┤Л≈░ Л╪°Л╪°М·┬ Л▄⌠Л∙└ Л≤╛К╕╟ ЙЁ═Й╦╟</p><p>Л≤│Л√╢: foot</p><p>Л╓▒Й╣╜: </p><p>Л²╪К°╩: </p><p>Л²╪Л²▄: </p> </html>
