--- a/hangul/가로왈.html
+++ b/hangul/가로왈.html
@@ -1,3 +1,1 @@
-<html> 
-  <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
-  <p> 가로왈 曰</p> <p>스펠: </p><p>풀이: 말할 때 벌어지는 입</p><p>영어: Say</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 가로왈 曰</p> <p>스펠: </p><p>풀이: 말할 때 벌어지는 입</p><p>영어: Say</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
