--- a/hangul/감출혜.html
+++ b/hangul/감출혜.html
@@ -1,2 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
-  <p> 감출혜 匸</p> <p>스펠: </p><p>풀이: 뒤로 숨으면 안보이는 은폐물 모양, 은폐물이 무언가 감추고 있다</p><p>영어: Hide</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 감출혜 ?</p> <p>스펠: </p><p>풀이: 뒤로 숨으면 안보이는 은폐물 모양, 은폐물이 무언가 감추고 있다</p><p>영어: Hide</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
