--- a/hangul/개견변.html
+++ b/hangul/개견변.html
@@ -1,2 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
-  <p> 개견변 犭</p> <p>스펠: </p><p>풀이: 개견을 변으로 사용하기 위해 만든 간략형, 시계 반대방향으로 90도 회전하면 개의 모습이 됨</p><p>영어: Dog</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 개견변 ?</p> <p>스펠: </p><p>풀이: 개견을 변으로 사용하기 위해 만든 간략형, 시계 반대방향으로 90도 회전하면 개의 모습이 됨</p><p>영어: Dog</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
