--- a/hangul/고기육.html
+++ b/hangul/고기육.html
@@ -1,2 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
-  <p> 고기육 肉</p> <p>스펠: </p><p>풀이: 고기의 근막과 힘줄 모양</p><p>영어: Meat</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 고기육 肉</p> <p>스펠: </p><p>풀이: 고기의 근막과 힘줄 모양</p><p>영어: Meat</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
