--- a/hangul/고를균.html
+++ b/hangul/고를균.html
@@ -1,2 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
-  <p> 고를균 勻</p> <p>스펠: </p><p>풀이: 곡식 말의 높이를 수평으로 깍는 평미래 모양</p><p>영어: Make Flat</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 고를균 勻</p> <p>스펠: </p><p>풀이: 곡식 말의 높이를 수평으로 깍는 평미래 모양</p><p>영어: Make Flat</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
