--- a/hangul/괘이름간.html
+++ b/hangul/괘이름간.html
@@ -1,2 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
-  <p> 괘이름간 艮</p> <p>스펠: </p><p>풀이: 눈을 크게 그린 구부린 사람 모양</p><p>영어: Eye</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 괘이름간 艮</p> <p>스펠: </p><p>풀이: 눈을 크게 그린 구부린 사람 모양</p><p>영어: Eye</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
