--- a/hangul/굽을곡.html
+++ b/hangul/굽을곡.html
@@ -1,2 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
-  <p> 굽을곡 曲</p> <p>스펠: </p><p>풀이: 대나무 굽혀서 만든 바구니 바구니 모양 </p><p>영어: Bend</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 굽을곡 曲</p> <p>스펠: </p><p>풀이: 대나무 굽혀서 만든 바구니 바구니 모양 </p><p>영어: Bend</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
