--- a/hangul/긴장.html
+++ b/hangul/긴장.html
@@ -1,3 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
-  
-  <p> 긴장 長</p> <p>스펠: </p><p>풀이: 긴 머리카락을 휘날리는 모양</p><p>영어: Long</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 긴장 長</p> <p>스펠: </p><p>풀이: 긴 머리카락을 휘날리는 모양</p><p>영어: Long</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
