--- a/hangul/꿸관.html
+++ b/hangul/꿸관.html
@@ -1,3 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
-  
-  <p> 꿸관 串</p> <p>스펠: </p><p>풀이: 무언가 여러개를 꼬챙이 하나로 꿴 모양</p><p>영어: Skew</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 꿸관 串</p> <p>스펠: </p><p>풀이: 무언가 여러개를 꼬챙이 하나로 꿴 모양</p><p>영어: Skew</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
