--- a/hangul/넉사.html
+++ b/hangul/넉사.html
@@ -1,3 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
-  
-  <p> 넉사 四</p> <p>스펠: 나라국 ? 어진사람인 ?</p><p>풀이: 나라 국경 성벽은 네면, 탁자 다리도 넷</p><p>영어: Four</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 넉사 四</p> <p>스펠: 나라국 ? 어진사람인 ?</p><p>풀이: 나라 국경 성벽은 네면, 탁자 다리도 넷</p><p>영어: Four</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
