--- a/hangul/능할능.html
+++ b/hangul/능할능.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ´ÉÇÒ´É Òö</p> <p>½ºÆç: </p><p>Ç®ÀÌ: °õÀÇ ¸Ó¸®, ¸öÅë, ´Ù¸® ¸ð¾ç, °õÀÌ ÀçÁÖ°¡ ¸¹´Ù, ´ÉÇÏ´Ù</p><p>¿µ¾î: Bear</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ëŠ¥í• ëŠ¥ èƒ½</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ê³°ì˜ ë¨¸ë¦¬, ëª¸í†µ, ë‹¤ë¦¬ ëª¨ì–‘, ê³°ì´ ìž¬ì£¼ê°€ ë§Žë‹¤, ëŠ¥í•˜ë‹¤</p><p>ì˜ì–´: Bear</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
