--- a/hangul/대세.html
+++ b/hangul/대세.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ´ë¼¼ á¦</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ¸·´ë¿¡ ¹­Àº ²ö, ¹­Àº ²öÀÇ ¼ö·Î ¼¼¿ùÀ» Ç¥½Ã</p><p>¿µ¾î: Generation</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ëŒ€ì„¸ ä¸–</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ë§‰ëŒ€ì— ë¬¶ì€ ëˆ, ë¬¶ì€ ëˆì˜ ìˆ˜ë¡œ ì„¸ì›”ì„ í‘œì‹œ</p><p>ì˜ì–´: Generation</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
