--- a/hangul/돼지머리두.html
+++ b/hangul/돼지머리두.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> µÅÁö¸Ó¸®µÎ ?</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ¸öÅëÀÌ ¾ø´Â µÅÁö ¸ð¾ç, Àß¶ó ³õÀº µÅÁöÀÇ ¸Ó¸®</p><p>¿µ¾î: Pig Head</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ë¼ì§€ë¨¸ë¦¬ë‘ ?</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ëª¸í†µì´ ì—†ëŠ” ë¼ì§€ ëª¨ì–‘, ìž˜ë¼ ë†“ì€ ë¼ì§€ì˜ ë¨¸ë¦¬</p><p>ì˜ì–´: Pig Head</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
