--- a/hangul/돼지해.html
+++ b/hangul/돼지해.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> µÅÁöÇØ ú¤</p> <p>½ºÆç: </p><p>Ç®ÀÌ: µÅÁöÀÇ ´Ù¸®¸¦ ÀÚ¸¥ ¸ð¾ç, ¸Ó¸®, ¸öÅë, ²¿¸®</p><p>¿µ¾î: Pig</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ë¼ì§€í•´ äº¥</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ë¼ì§€ì˜ ë‹¤ë¦¬ë¥¼ ìžë¥¸ ëª¨ì–‘, ë¨¸ë¦¬, ëª¸í†µ, ê¼¬ë¦¬</p><p>ì˜ì–´: Pig</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
