--- a/hangul/뒤져올치.html
+++ b/hangul/뒤져올치.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> µÚÁ®¿ÃÄ¡ ?</p> <p>½ºÆç: </p><p>Ç®ÀÌ: »ç¶÷ÀÌ ÁöÃÄ¼­ ¹ßÀ» ²ø¸é¼­ µÚÃÄÁ®¼­ ¿À´Â ¸ð¾ç</p><p>¿µ¾î: Get left behind</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ë’¤ì ¸ì˜¬ì¹˜ ?</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ì‚¬ëžŒì´ ì§€ì³ì„œ ë°œì„ ëŒë©´ì„œ ë’¤ì³ì ¸ì„œ ì˜¤ëŠ” ëª¨ì–‘</p><p>ì˜ì–´: Get left behind</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
