--- a/hangul/들입.html
+++ b/hangul/들입.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> µéÀÔ ìý</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ³ôÀÌ°¡ ³·Àº ÀÔ±¸¿¡ µé¾î°¡±â À§ÇØ °í°³¸¦ ¼÷ÀÎ »ç¶÷ ¸ð½À</p><p>¿µ¾î: Enter</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ë“¤ìž… å…¥</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ë†’ì´ê°€ ë‚®ì€ ìž…êµ¬ì— ë“¤ì–´ê°€ê¸° ìœ„í•´ ê³ ê°œë¥¼ ìˆ™ì¸ ì‚¬ëžŒ ëª¨ìŠµ</p><p>ì˜ì–´: Enter</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
