--- a/hangul/등뼈려.html
+++ b/hangul/등뼈려.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> µî»À·Á Õå</p> <p>½ºÆç: </p><p>Ç®ÀÌ: µî»À¿Í µî»À°¡ ¸Â´ê¾Æ ÀÖ´Â ¸ð¾ç</p><p>¿µ¾î: Backbone</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ë“±ë¼ˆë ¤ å‘‚</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ë“±ë¼ˆì™€ ë“±ë¼ˆê°€ ë§žë‹¿ì•„ ìžˆëŠ” ëª¨ì–‘</p><p>ì˜ì–´: Backbone</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
