--- a/hangul/또우.html
+++ b/hangul/또우.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ¶Ç¿ì éÑ</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ¿À¸¥¼Õ, ¿À¸¥¼ÕÀ» »ç¿ëÇÏ°í ¶Ç »ç¿ëÇÑ´Ù</p><p>¿µ¾î: Again</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ë˜ìš° åˆ</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ì˜¤ë¥¸ì†, ì˜¤ë¥¸ì†ì„ ì‚¬ìš©í•˜ê³  ë˜ ì‚¬ìš©í•œë‹¤</p><p>ì˜ì–´: Again</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
