--- a/hangul/말씀언.html
+++ b/hangul/말씀언.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ¸»¾¸¾ð åë</p> <p>½ºÆç: </p><p>Ç®ÀÌ: »ç¶÷ÀÌ ¸»À» ÇÏ¸é ±× »ç¶÷ÀÇ ÄÚ¿Í ÀÔÀ» ÃÄ´Ùº»´Ù.</p><p>¿µ¾î: Talk</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ë§ì”€ì–¸ è¨€</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ì‚¬ëžŒì´ ë§ì„ í•˜ë©´ ê·¸ ì‚¬ëžŒì˜ ì½”ì™€ ìž…ì„ ì³ë‹¤ë³¸ë‹¤.</p><p>ì˜ì–´: Talk</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
