--- a/hangul/물고기어.html
+++ b/hangul/물고기어.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ¹°°í±â¾î åà</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ¹°°í±â, ÀÔ, ºñ´Ã, ¿©·¯ °¡´ÚÀÇ ²¿¸® Áö´À·¯¹Ì</p><p>¿µ¾î: Fish</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ë¬¼ê³ ê¸°ì–´ é­š</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ë¬¼ê³ ê¸°, ìž…, ë¹„ëŠ˜, ì—¬ëŸ¬ ê°€ë‹¥ì˜ ê¼¬ë¦¬ ì§€ëŠëŸ¬ë¯¸</p><p>ì˜ì–´: Fish</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
