--- a/hangul/버금아.html
+++ b/hangul/버금아.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ¹ö±Ý¾Æ ä¬</p> <p>½ºÆç: </p><p>Ç®ÀÌ: Áý¾È¿¡ »ç°Å¸®°¡ ÀÖ´Â Áý, ±Ã±È¿¡ ¹ö±Ý</p><p>¿µ¾î: Second</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ë²„ê¸ˆì•„ äºž</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ì§‘ì•ˆì— ì‚¬ê±°ë¦¬ê°€ ìžˆëŠ” ì§‘, ê¶ê¶ì— ë²„ê¸ˆ</p><p>ì˜ì–´: Second</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
