--- a/hangul/병들어기댈역.html
+++ b/hangul/병들어기댈역.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> º´µé¾î±â´î¿ª ?</p> <p>½ºÆç: </p><p>Ç®ÀÌ: »ç¶÷ÀÌ º´µé¸é Áý¾È¿¡ ÀÖ°ÔµÇ°í Æò»ó¿¡ ±â´ë¾î ´¯°Ô µÈ´Ù´Â ¶æ</p><p>¿µ¾î: Sick</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ë³‘ë“¤ì–´ê¸°ëŒˆì—­ ?</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ì‚¬ëžŒì´ ë³‘ë“¤ë©´ ì§‘ì•ˆì— ìžˆê²Œë˜ê³  í‰ìƒì— ê¸°ëŒ€ì–´ ëˆ•ê²Œ ëœë‹¤ëŠ” ëœ»</p><p>ì˜ì–´: Sick</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
