--- a/hangul/사귈교.html
+++ b/hangul/사귈교.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> »ç±Ð±³ Îß</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ¾É¾Æ¼­ ´Ù¸®¸¦ ²Á ¸ð¾ç, ´Ù¸®¸¦ ±³Â÷½ÃÅ² ¸ð¾ç, ´Ù¸® µÑÀÌ ¼­·Î »ç±Ï´Ù.</p><p>¿µ¾î: Company</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ì‚¬ê·ˆêµ äº¤</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ì•‰ì•„ì„œ ë‹¤ë¦¬ë¥¼ ê¼° ëª¨ì–‘, ë‹¤ë¦¬ë¥¼ êµì°¨ì‹œí‚¨ ëª¨ì–‘, ë‹¤ë¦¬ ë‘˜ì´ ì„œë¡œ ì‚¬ê·„ë‹¤.</p><p>ì˜ì–´: Company</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
