--- a/hangul/선비사.html
+++ b/hangul/선비사.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ¼±ºñ»ç ÞÍ</p> <p>½ºÆç: </p><p>Ç®ÀÌ: °©¿ÊÀ» ÀÔ¾î »óÃ¼°¡ Ä¿ º¸ÀÌ´Â ¹«»ç, ¼±ºñ ¸ð¾ç</p><p>¿µ¾î: General</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ì„ ë¹„ì‚¬ å£«</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ê°‘ì˜·ì„ ìž…ì–´ ìƒì²´ê°€ ì»¤ ë³´ì´ëŠ” ë¬´ì‚¬, ì„ ë¹„ ëª¨ì–‘</p><p>ì˜ì–´: General</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
