--- a/hangul/손수.html
+++ b/hangul/손수.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ¼Õ¼ö â¢</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ¼Õ¹Ù´Ú¿¡ ³­ ¼ÕÀÇ ¼Õ±Ý ¸ð¾ç</p><p>¿µ¾î: Hand</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ì†ìˆ˜ æ‰‹</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ì†ë°”ë‹¥ì— ë‚œ ì†ì˜ ì†ê¸ˆ ëª¨ì–‘</p><p>ì˜ì–´: Hand</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
