--- a/hangul/손수변.html
+++ b/hangul/손수변.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ¼Õ¼öº¯ ?</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ¼Õ¼ö¸¦ º¯À¸·Î »ç¿ëÇÏ±â À§ÇØ °£·«È­ÇÑ ¸ð¾ç</p><p>¿µ¾î: Hand</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ì†ìˆ˜ë³€ ?</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ì†ìˆ˜ë¥¼ ë³€ìœ¼ë¡œ ì‚¬ìš©í•˜ê¸° ìœ„í•´ ê°„ëžµí™”í•œ ëª¨ì–‘</p><p>ì˜ì–´: Hand</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
