--- a/hangul/숨을은.html
+++ b/hangul/숨을은.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ¼ûÀ»Àº ?</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ÀºÆó¹° µÚ¿¡ ¼ûÀº ¸ð¾ç</p><p>¿µ¾î: Hide</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ìˆ¨ì„ì€ ?</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ì€íë¬¼ ë’¤ì— ìˆ¨ì€ ëª¨ì–‘</p><p>ì˜ì–´: Hide</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
