--- a/hangul/마음심변.html
+++ b/hangul/마음심변.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ¸¶À½½Éº¯ ?</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ½ÉÀåÀ» º¯À¸·Î ¾²±â À§ÇØ ¸¸µç °£·«Çü</p><p>¿µ¾î: Heart</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ë§ˆìŒì‹¬ë³€ ?</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ì‹¬ìž¥ì„ ë³€ìœ¼ë¡œ ì“°ê¸° ìœ„í•´ ë§Œë“  ê°„ëžµí˜•</p><p>ì˜ì–´: Heart</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
