--- a/hangul/마칠료.html
+++ b/hangul/마칠료.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ¸¶Ä¥·á Öõ</p> <p>½ºÆç: </p><p>Ç®ÀÌ: »êµµ¸¦ ºüÁ®³ª¿Â ¾Æ±â ¸ð½À, »ê¸ð°¡ Ãâ»êÀ» ¸¶ÃÆ´Ù, »ê¸ðÀÇ °íÅëÀÌ ³¡³µ´Ù</p><p>¿µ¾î: Complete</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ë§ˆì¹ ë£Œ äº†</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ì‚°ë„ë¥¼ ë¹ ì ¸ë‚˜ì˜¨ ì•„ê¸° ëª¨ìŠµ, ì‚°ëª¨ê°€ ì¶œì‚°ì„ ë§ˆì³¤ë‹¤, ì‚°ëª¨ì˜ ê³ í†µì´ ëë‚¬ë‹¤</p><p>ì˜ì–´: Complete</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
