--- a/hangul/말두.html
+++ b/hangul/말두.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ¸»µÎ Ôà</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ±¹ÀÚ ¸ð¾ç, ½ÒÀÌ³ª ÄáÀ» ÀÏÁ¤·® °è·®ÇÏ´Â ±â±¸</p><p>¿µ¾î: Measuring Bucket</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ë§ë‘ æ–—</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: êµ­ìž ëª¨ì–‘, ìŒ€ì´ë‚˜ ì½©ì„ ì¼ì •ëŸ‰ ê³„ëŸ‰í•˜ëŠ” ê¸°êµ¬</p><p>ì˜ì–´: Measuring Bucket</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
