--- a/hangul/머리수.html
+++ b/hangul/머리수.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ¸Ó¸®¼ö âÏ</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ¸Ó¸®Ä«¶ô, Á¤¼ö¸®, ÄÚÀÖ´Â ¸Ó¸®</p><p>¿µ¾î: Head</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ë¨¸ë¦¬ìˆ˜ é¦–</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ë¨¸ë¦¬ì¹´ë½, ì •ìˆ˜ë¦¬, ì½”ìžˆëŠ” ë¨¸ë¦¬</p><p>ì˜ì–´: Head</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
