--- a/hangul/머리혈.html
+++ b/hangul/머리혈.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ¸Ó¸®Ç÷ úí</p> <p>½ºÆç: </p><p>Ç®ÀÌ: Á¤¸®¼ö, ÄÚ, ¼ö¿°ÀÖ´Â ¸Ó¸®</p><p>¿µ¾î: Head</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ë¨¸ë¦¬í˜ˆ é </p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ì •ë¦¬ìˆ˜, ì½”, ìˆ˜ì—¼ìžˆëŠ” ë¨¸ë¦¬</p><p>ì˜ì–´: Head</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
