--- a/hangul/모방.html
+++ b/hangul/모방.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ¸ð¹æ Û°</p> <p>½ºÆç: </p><p>Ç®ÀÌ: Àï±âÀÇ ³¯ ¸ð¾ç, Àï±âÀÇ ³¯ÀÌ ³×¸ð´Ù.</p><p>¿µ¾î: Square</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ëª¨ë°© æ–¹</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ìŸê¸°ì˜ ë‚  ëª¨ì–‘, ìŸê¸°ì˜ ë‚ ì´ ë„¤ëª¨ë‹¤.</p><p>ì˜ì–´: Square</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
