--- a/hangul/물수.html
+++ b/hangul/물수.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ¹°¼ö â©</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ½Ã³Á¹°ÀÇ Áö·ù¿Í º»·ù°¡ ¸¸³ª´Â ¸ð½À</p><p>¿µ¾î: Water</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ë¬¼ìˆ˜ æ°´</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ì‹œëƒ‡ë¬¼ì˜ ì§€ë¥˜ì™€ ë³¸ë¥˜ê°€ ë§Œë‚˜ëŠ” ëª¨ìŠµ</p><p>ì˜ì–´: Water</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
