--- a/hangul/미칠급.html
+++ b/hangul/미칠급.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ¹ÌÄ¥±Þ Ðà</p> <p>½ºÆç: </p><p>Ç®ÀÌ: µÚ¿¡ ÀÖ´Â »ç¶÷ÀÇ ¼ÕÀÌ ¾Õ¼­°¡´Â »ç¶÷ÀÇ ÀâÀº ¸ð½À, ¹ÌÄ£´Ù, µû¶óÀâ¾Ò´Ù.</p><p>¿µ¾î: Reach</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ë¯¸ì¹ ê¸‰ åŠ</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ë’¤ì— ìžˆëŠ” ì‚¬ëžŒì˜ ì†ì´ ì•žì„œê°€ëŠ” ì‚¬ëžŒì˜ ìž¡ì€ ëª¨ìŠµ, ë¯¸ì¹œë‹¤, ë”°ë¼ìž¡ì•˜ë‹¤.</p><p>ì˜ì–´: Reach</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
