--- a/hangul/받들공.html
+++ b/hangul/받들공.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ¹Þµé°ø ?</p> <p>½ºÆç: </p><p>Ç®ÀÌ: µÎ ¼ÕÀ¸·Î ¹«¾ð°¡ ¹Þµå´Â ¸ð¾ç</p><p>¿µ¾î: Support</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ë°›ë“¤ê³µ ?</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ë‘ ì†ìœ¼ë¡œ ë¬´ì–¸ê°€ ë°›ë“œëŠ” ëª¨ì–‘</p><p>ì˜ì–´: Support</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
