--- a/hangul/배주.html
+++ b/hangul/배주.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ¹èÁÖ ñÇ</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ¹è¿Í ¹èÀÇ »ñ´ëÀÇ ¸ð¾ç</p><p>¿µ¾î: Boat</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ë°°ì£¼ èˆŸ</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ë°°ì™€ ë°°ì˜ ì‚¿ëŒ€ì˜ ëª¨ì–‘</p><p>ì˜ì–´: Boat</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
