--- a/hangul/백성민.html
+++ b/hangul/백성민.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ¹é¼º¹Î ÚÅ</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ±î¸·´«À» ²­»¶ÀÌ´Â ¹é¼º ¸ð¾ç</p><p>¿µ¾î: the public</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ë°±ì„±ë¯¼ æ°‘</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ê¹Œë§‰ëˆˆì„ ê»Œë»‘ì´ëŠ” ë°±ì„± ëª¨ì–‘</p><p>ì˜ì–´: the public</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
