--- a/hangul/범호.html
+++ b/hangul/범호.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ¹üÈ£ ûÛ</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ³¯Ä«·Î¿î ¹ßÅéÀ» °¡Áø ÁÙ¹«´Ì È£¶ûÀÌ ¸ð¾ç, ¹Ø±ÛÀÚ·Î »ç¿ëµÉ ¶§´Â ¹üÈ£ ? °¡ ¾²ÀÓ</p><p>¿µ¾î: Tiger</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ë²”í˜¸ è™Ž</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ë‚ ì¹´ë¡œìš´ ë°œí†±ì„ ê°€ì§„ ì¤„ë¬´ëŠ¬ í˜¸ëž‘ì´ ëª¨ì–‘, ë°‘ê¸€ìžë¡œ ì‚¬ìš©ë  ë•ŒëŠ” ë²”í˜¸ ? ê°€ ì“°ìž„</p><p>ì˜ì–´: Tiger</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
