--- a/hangul/보일시.html
+++ b/hangul/보일시.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> º¸ÀÏ½Ã ãÆ</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ³ôÀÌ¸¦ ³ôÀÎ Á¦»ç ±×¸© ¸ð¾ç</p><p>¿µ¾î: Display</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ë³´ì¼ì‹œ ç¤º</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ë†’ì´ë¥¼ ë†’ì¸ ì œì‚¬ ê·¸ë¦‡ ëª¨ì–‘</p><p>ì˜ì–´: Display</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
