--- a/hangul/불화.html
+++ b/hangul/불화.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ºÒÈ­ ûý</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ¸ð´ÚºÒÀ» ÇÇ¿î ¸ð¾ç</p><p>¿µ¾î: Fire</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ë¶ˆí™” ç«</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ëª¨ë‹¥ë¶ˆì„ í”¼ìš´ ëª¨ì–‘</p><p>ì˜ì–´: Fire</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
