--- a/hangul/사내부.html
+++ b/hangul/사내부.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> »ç³»ºÎ Üý</p> <p>½ºÆç: </p><p>Ç®ÀÌ: »óÅõ¿¡ ºñ³à¸¦ ²ÈÀº »ç³» ¸ð½À</p><p>¿µ¾î: Husband</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ì‚¬ë‚´ë¶€ å¤«</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ìƒíˆ¬ì— ë¹„ë…€ë¥¼ ê½‚ì€ ì‚¬ë‚´ ëª¨ìŠµ</p><p>ì˜ì–´: Husband</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
