--- a/hangul/사슴록.html
+++ b/hangul/사슴록.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> »ç½¿·Ï Öã</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ÁýÁöºØ°°Àº »ç½¿ÀÇ °¡Á×, »Ô, ´Ù¸® ¸ð¾ç</p><p>¿µ¾î: Deer</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ì‚¬ìŠ´ë¡ é¹¿</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ì§‘ì§€ë¶•ê°™ì€ ì‚¬ìŠ´ì˜ ê°€ì£½, ë¿”, ë‹¤ë¦¬ ëª¨ì–‘</p><p>ì˜ì–´: Deer</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
