--- a/hangul/새을.html
+++ b/hangul/새을.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> »õÀ» ëà</p> <p>½ºÆç: </p><p>Ç®ÀÌ: »õÀÇ ¸Ó¸®, ±¸ºÎ·¯Áø ¸ñ, ¸öÅë ¸ð¾ç</p><p>¿µ¾î: Bird</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ìƒˆì„ ä¹™</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ìƒˆì˜ ë¨¸ë¦¬, êµ¬ë¶€ëŸ¬ì§„ ëª©, ëª¸í†µ ëª¨ì–‘</p><p>ì˜ì–´: Bird</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
