--- a/hangul/솜면.html
+++ b/hangul/솜면.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ¼Ø¸é Øú</p> <p>½ºÆç: ½Ç¸è ? ºñ´Ü¹é ÛÙ</p><p>Ç®ÀÌ: ½Ç·Î ¸¸µé¼öµµ ÀÖ°í »õ ÇÏ¾á ºñ´Ü ¼ö°ÇÃ³·³ ¸¸µé ¼öµµ ÀÖ´Â ¼Ø, ¸é</p><p>¿µ¾î: Cotton</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ì†œë©´ ç¶¿</p> <p>ìŠ¤íŽ : ì‹¤ë©± ? ë¹„ë‹¨ë°± å¸›</p><p>í’€ì´: ì‹¤ë¡œ ë§Œë“¤ìˆ˜ë„ ìžˆê³  ìƒˆ í•˜ì–€ ë¹„ë‹¨ ìˆ˜ê±´ì²˜ëŸ¼ ë§Œë“¤ ìˆ˜ë„ ìžˆëŠ” ì†œ, ë©´</p><p>ì˜ì–´: Cotton</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
