--- a/hangul/스스로자.html
+++ b/hangul/스스로자.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ½º½º·ÎÀÚ í»</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ÄÚ¸ð¾ç, ÄÚ¸¦ °¡¸®Å°¸ç ÀÚ±â¸¦ °¡¸®Å°´Â Áß±¹ÀÇ ¹®È­</p><p>¿µ¾î: Myself</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ìŠ¤ìŠ¤ë¡œìž è‡ª</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ì½”ëª¨ì–‘, ì½”ë¥¼ ê°€ë¦¬í‚¤ë©° ìžê¸°ë¥¼ ê°€ë¦¬í‚¤ëŠ” ì¤‘êµ­ì˜ ë¬¸í™”</p><p>ì˜ì–´: Myself</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
