--- a/hangul/신하신.html
+++ b/hangul/신하신.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ╫его╫е ЦМ</p> <p>╫╨фГ: </p><p>г╝юл: ╫егоюг е╚ ╢╚╬к ╦П╬Г</p><p>©╣╬Н: Vassal</p><p>аъ╠╧: </p><p>юо╤Ф: </p><p>юою╫: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> Л▀═М∙≤Л▀═ Х┤ё</p> <p>Л┼╓М▌═: </p><p>М▓─Л²╢: Л▀═М∙≤Л²≤ М│╟ К┬┬Л∙▄ К╙╗Л√▒</p><p>Л≤│Л√╢: Vassal</p><p>Л╓▒Й╣╜: </p><p>Л²╪К°╩: </p><p>Л²╪Л²▄: </p> </html>
