--- a/hangul/여자여.html
+++ b/hangul/여자여.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ¿©ÀÚ¿© Ò³</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ¸ö¸Å°¡ ¾Æ¸§´Ù¿î ¿©ÀÚ ¸ð½À</p><p>¿µ¾î: Woman</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ì—¬ìžì—¬ å¥³</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ëª¸ë§¤ê°€ ì•„ë¦„ë‹¤ìš´ ì—¬ìž ëª¨ìŠµ</p><p>ì˜ì–´: Woman</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
