--- a/hangul/옷의.html
+++ b/hangul/옷의.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ΏΚΐΗ λύ</p> <p>½ΊΖη: </p><p>Η®ΐΜ: »σΐΗ ΈπΎη</p><p>ΏµΎξ: Cloth</p><p>Αί±Ή: </p><p>ΐΟ¶ζ: </p><p>ΐΟΐ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> μ·μ θ΅£</p> <p>μ¤ν : </p><p>ν’€μ΄: μƒμ λª¨μ–‘</p><p>μμ–΄: Cloth</p><p>μ¤‘κµ­: </p><p>μΌλ»: </p><p>μΌμ: </p> </html>
