--- a/hangul/우뚝할올.html
+++ b/hangul/우뚝할올.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ¿ì¶ÒÇÒ¿Ã è´</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ´Ù¸®¸¦ ¹ú¸®°í ¼­¼­ Çã¸®¿¡ ¼ÕÀ» ¿Ã¸®°í ¿ì¶Ò ¼± »ç¶÷ ¸ð½À</p><p>¿µ¾î: Towering</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ìš°ëší• ì˜¬ å…€</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ë‹¤ë¦¬ë¥¼ ë²Œë¦¬ê³  ì„œì„œ í—ˆë¦¬ì— ì†ì„ ì˜¬ë¦¬ê³  ìš°ëš ì„  ì‚¬ëžŒ ëª¨ìŠµ</p><p>ì˜ì–´: Towering</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
