--- a/hangul/입구.html
+++ b/hangul/입구.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ют╠╦ о╒</p> <p>╫╨фГ: </p><p>г╝юл: ╦╩го╢б ют, ╦т╢б ют ╦П╬Г</p><p>©╣╬Н: Mouth</p><p>аъ╠╧: </p><p>юо╤Ф: </p><p>юою╫: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> Л·┘Й╣╛ Е▐ё</p> <p>Л┼╓М▌═: </p><p>М▓─Л²╢: К╖░М∙≤К┼■ Л·┘, К╗╧К┼■ Л·┘ К╙╗Л√▒</p><p>Л≤│Л√╢: Mouth</p><p>Л╓▒Й╣╜: </p><p>Л²╪К°╩: </p><p>Л²╪Л²▄: </p> </html>
