--- a/hangul/작을소.html
+++ b/hangul/작을소.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ÀÛÀ»¼Ò á³</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ¹«¾ð°¡ À§¿¡¼­ ¾Æ·¡·Î ¶³¾îÁú ¶§ ÁÖº¯¿¡ ÀÛÀº ºÎ½º·¯±âµéµµ °°ÀÌ ¶³¾îÁø´Ù</p><p>¿µ¾î: Tiny</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ìž‘ì„ì†Œ å°</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ë¬´ì–¸ê°€ ìœ„ì—ì„œ ì•„ëž˜ë¡œ ë–¨ì–´ì§ˆ ë•Œ ì£¼ë³€ì— ìž‘ì€ ë¶€ìŠ¤ëŸ¬ê¸°ë“¤ë„ ê°™ì´ ë–¨ì–´ì§„ë‹¤</p><p>ì˜ì–´: Tiny</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
