--- a/hangul/점복.html
+++ b/hangul/점복.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> Á¡º¹ ÜÔ</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ´Þ±º ¼è²¿Ã¬ÀÌ¸¦ ¼Ò»À¿¡ Âñ·¯ ¼Ò»À°¡ Å¸µé¾î °¡´Â ¸ð½ÀÀ¸·Î Á¡À»Ä¡´Â ¼Ò»À Á¡</p><p>¿µ¾î: Fortune Telling</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ì ë³µ åœ</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ë‹¬êµ° ì‡ ê¼¬ì±™ì´ë¥¼ ì†Œë¼ˆì— ì°”ëŸ¬ ì†Œë¼ˆê°€ íƒ€ë“¤ì–´ ê°€ëŠ” ëª¨ìŠµìœ¼ë¡œ ì ì„ì¹˜ëŠ” ì†Œë¼ˆ ì </p><p>ì˜ì–´: Fortune Telling</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
