--- a/hangul/창과.html
+++ b/hangul/창과.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> Ã¢°ú Íü</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ³¯ÀÌ ¼± Ã¢ ¸ð¾ç</p><p>¿µ¾î: Spear</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ì°½ê³¼ æˆˆ</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ë‚ ì´ ì„  ì°½ ëª¨ì–‘</p><p>ì˜ì–´: Spear</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
