--- a/hangul/쓰게모.html
+++ b/hangul/쓰게모.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ¾²°Ô¸ð ?</p> <p>½ºÆç: </p><p>Ç®ÀÌ: µ¤¾î ¾²´Â ¸ðÀÚ ¸ð¾ç</p><p>¿µ¾î: Hat</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ì“°ê²Œëª¨ ?</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ë®ì–´ ì“°ëŠ” ëª¨ìž ëª¨ì–‘</p><p>ì˜ì–´: Hat</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
