--- a/hangul/쓸용.html
+++ b/hangul/쓸용.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ¾µ¿ë éÄ</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ³ª¹« Á¶°¢À» ¿«¾î¼­ ¸¸µç ³ª¹«Åë ¸ð¾ç </p><p>¿µ¾î: Use</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ì“¸ìš© ç”¨</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ë‚˜ë¬´ ì¡°ê°ì„ ì—®ì–´ì„œ ë§Œë“  ë‚˜ë¬´í†µ ëª¨ì–‘ </p><p>ì˜ì–´: Use</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
