--- a/hangul/아들자.html
+++ b/hangul/아들자.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ¾ÆµéÀÚ í­</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ¾È¾Æ ´Þ¶ó°í ÆÈÀ» ¹ú¸° ¾ÆÀÌ ¸ð½À</p><p>¿µ¾î: Son</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ì•„ë“¤ìž å­</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ì•ˆì•„ ë‹¬ë¼ê³  íŒ”ì„ ë²Œë¦° ì•„ì´ ëª¨ìŠµ</p><p>ì˜ì–´: Son</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
