--- a/hangul/안석궤.html
+++ b/hangul/안석궤.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ¾È¼®±Ë ?</p> <p>½ºÆç: </p><p>Ç®ÀÌ: Ã¥»ó, ÀÇÀÚ ¸ð¾ç</p><p>¿µ¾î: Chair</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ì•ˆì„ê¶¤ ?</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ì±…ìƒ, ì˜ìž ëª¨ì–‘</p><p>ì˜ì–´: Chair</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
