--- a/hangul/어그러질천.html
+++ b/hangul/어그러질천.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ¾î±×·¯ÁúÃµ ô¿</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ÃãÃß¾î ¾î±×·¯Áø ´Ù¸® ¸ð¾ç</p><p>¿µ¾î: be dislocated</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ì–´ê·¸ëŸ¬ì§ˆì²œ èˆ›</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ì¶¤ì¶”ì–´ ì–´ê·¸ëŸ¬ì§„ ë‹¤ë¦¬ ëª¨ì–‘</p><p>ì˜ì–´: be dislocated</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
