--- a/hangul/어금니아.html
+++ b/hangul/어금니아.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ¾î±Ý´Ï¾Æ ä³</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ±æ°Ô Æ¢¾î³ª¿Â Áü½ÂÀÇ ÀÌ»¡</p><p>¿µ¾î: Tooth</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ì–´ê¸ˆë‹ˆì•„ ç‰™</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ê¸¸ê²Œ íŠ€ì–´ë‚˜ì˜¨ ì§ìŠ¹ì˜ ì´ë¹¨</p><p>ì˜ì–´: Tooth</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
