--- a/hangul/어조사야.html
+++ b/hangul/어조사야.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ¾îÁ¶»ç¾ß å¥</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ¹°À» ´ã°í ÀÖ´Â ÁÖÀüÀÚ ¸ð¾ç</p><p>¿µ¾î: Kettle</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ì–´ì¡°ì‚¬ì•¼ ä¹Ÿ</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ë¬¼ì„ ë‹´ê³  ìžˆëŠ” ì£¼ì „ìž ëª¨ì–‘</p><p>ì˜ì–´: Kettle</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
