--- a/hangul/언덕구.html
+++ b/hangul/언덕구.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ¾ð´ö±¸ Îø</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ºÀ¿ì¸®°¡ 2°³ÀÎ ¾à°£ ³ôÀº ¾ð´ö</p><p>¿µ¾î: Hill</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ì–¸ë•êµ¬ ä¸˜</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ë´‰ìš°ë¦¬ê°€ 2ê°œì¸ ì•½ê°„ ë†’ì€ ì–¸ë•</p><p>ì˜ì–´: Hill</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
