--- a/hangul/의지할의.html
+++ b/hangul/의지할의.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ÀÇÁöÇÒÀÇ ëî</p> <p>½ºÆç: »ç¶÷ÀÎ ? ¿ÊÀÇ ëý</p><p>Ç®ÀÌ: »ç¶÷ÀÌ ¿Ê¿¡ ÀÇÁö ÇÑ´Ù</p><p>¿µ¾î: Depend on</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ì˜ì§€í• ì˜ ä¾</p> <p>ìŠ¤íŽ : ì‚¬ëžŒì¸ ? ì˜·ì˜ è¡£</p><p>í’€ì´: ì‚¬ëžŒì´ ì˜·ì— ì˜ì§€ í•œë‹¤</p><p>ì˜ì–´: Depend on</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
