--- a/hangul/이에내.html
+++ b/hangul/이에내.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ÀÌ¿¡³» Ò¬</p> <p>½ºÆç: </p><p>Ç®ÀÌ: »õ³¢ÁÙ ÈÖ¾î ºÒ·èÇÑ ¸ð¾ç Ç¥Çö</p><p>¿µ¾î: Therefore</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ì´ì—ë‚´ ä¹ƒ</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ìƒˆë¼ì¤„ íœ˜ì–´ ë¶ˆë£©í•œ ëª¨ì–‘ í‘œí˜„</p><p>ì˜ì–´: Therefore</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
