--- a/hangul/이을계.html
+++ b/hangul/이을계.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ÀÌÀ»°è Í§</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ½ÇÅ¸·¡ÀÇ ³¡ ½ÇÀÌ ´Ù¸¥ ½Ç°ú ÀÌ¾îÁø´Ù, °è¼ÓµÈ´Ù.</p><p>¿µ¾î: Relay</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ì´ì„ê³„ ç³»</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ì‹¤íƒ€ëž˜ì˜ ë ì‹¤ì´ ë‹¤ë¥¸ ì‹¤ê³¼ ì´ì–´ì§„ë‹¤, ê³„ì†ëœë‹¤.</p><p>ì˜ì–´: Relay</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
