--- a/hangul/일곱칠.html
+++ b/hangul/일곱칠.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ÀÏ°öÄ¥ öÒ</p> <p>½ºÆç: ÇÑÀÏ ìé ¼ûÀ»Àº ?</p><p>Ç®ÀÌ: ¼Õ¿¡ Ä®À» Àâ°í ³»¸®Ä¡¸é Ä¥ÇÏ´Â ¼Ò¸®°¡ ³­´Ù</p><p>¿µ¾î: Seven</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ì¼ê³±ì¹  ä¸ƒ</p> <p>ìŠ¤íŽ : í•œì¼ ä¸€ ìˆ¨ì„ì€ ?</p><p>í’€ì´: ì†ì— ì¹¼ì„ ìž¡ê³  ë‚´ë¦¬ì¹˜ë©´ ì¹ í•˜ëŠ” ì†Œë¦¬ê°€ ë‚œë‹¤</p><p>ì˜ì–´: Seven</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
