--- a/hangul/자축거릴촉.html
+++ b/hangul/자축거릴촉.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ÀÚÃà°Å¸±ÃË ?</p> <p>½ºÆç: </p><p>Ç®ÀÌ: º¸ÆøÀ» Á¼°ÔÇØ¼­ °È´Â ¸ð½À</p><p>¿µ¾î: narrow step walk</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ìžì¶•ê±°ë¦´ì´‰ ?</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ë³´í­ì„ ì¢ê²Œí•´ì„œ ê±·ëŠ” ëª¨ìŠµ</p><p>ì˜ì–´: narrow step walk</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
