--- a/hangul/점주.html
+++ b/hangul/점주.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> Á¡ÁÖ ?</p> <p>½ºÆç: </p><p>Ç®ÀÌ: Á¡ ¸ð¾ç</p><p>¿µ¾î: Point</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ì ì£¼ ?</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ì  ëª¨ì–‘</p><p>ì˜ì–´: Point</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
