--- a/hangul/주인주.html
+++ b/hangul/주인주.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ÁÖÀÎÁÖ ñ«</p> <p>½ºÆç: </p><p>Ç®ÀÌ: µîÀÜ´ë¿Í µîÀÜºÒ ¸ð¾ç, Áý¿¡ µîÀÜºÒÀ» ¹àÈ÷´Â »ì¶÷Àº ÁÖÀÎÀÌ´Ù</p><p>¿µ¾î: Host</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ì£¼ì¸ì£¼ ä¸»</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ë“±ìž”ëŒ€ì™€ ë“±ìž”ë¶ˆ ëª¨ì–‘, ì§‘ì— ë“±ìž”ë¶ˆì„ ë°ížˆëŠ” ì‚´ëžŒì€ ì£¼ì¸ì´ë‹¤</p><p>ì˜ì–´: Host</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
